--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack server --config webpack/webpack.config.js --env env=dev --open",
-    "build": "webpack server --config webpack/webpack.config.js --env env=prod --open"
+    "build": "webpack server --config webpack/webpack.config.js --env env=prod"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -18,11 +18,13 @@
     "@babel/preset-env": "^7.19.0",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "react-refresh": "^0.14.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.8.3",
     "webpack": "^5.74.0",
