--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "author": "mrasheduzzaman <rashed091nsu@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack server --config webpack/webpack.config.js --env env=dev --open",
-    "build": "webpack server --config webpack/webpack.config.js --env env=prod"
+    "start": "webpack server --config webpack/webpack.config.js --env env=dev",
+    "build": "webpack server --config webpack/webpack.config.js --env env=prod",
+    "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\""
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -21,8 +22,15 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "eslint": "^8.23.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
     "react-refresh": "^0.14.0",
     "style-loader": "^3.3.1",
