--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "style-loader": "^3.3.1",
     "typescript": "^4.8.3",
     "webpack": "^5.74.0",
+    "webpack-bundle-analyzer": "^4.6.1",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.0",
     "webpack-merge": "^5.8.0"
