--- a/package.json
+++ b/package.json
@@ -4,11 +4,28 @@
   "main": "index.js",
   "author": "mrasheduzzaman <rashed091nsu@gmail.com>",
   "license": "MIT",
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/<GITHUB_USERNAME>/<PROJECT_NAME>.git"
+  },
+  "keywords": [
+    "<FIRST_KEYWORD>",
+    "<SECOND_KEYWORD>",
+    "<N_KEYWORD>"
+  ],
+  "bugs": {
+    "url": "https://github.com/<GITHUB_USERNAME>/<PROJECT_NAME>/issues"
+  },
+  "homepage": "https://github.com/<GITHUB_USERNAME>/<PROJECT_NAME>#readme",
   "scripts": {
     "start": "webpack server --config webpack/webpack.config.js --env env=dev",
     "build": "webpack server --config webpack/webpack.config.js --env env=prod",
     "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
-    "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
+    "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -22,6 +39,10 @@
     "@babel/preset-typescript": "^7.18.6",
     "@babel/runtime": "^7.19.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.0.0",
+    "@types/node": "^18.7.16",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
@@ -39,10 +60,13 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
+    "jest": "^29.0.2",
+    "jest-environment-jsdom": "^29.0.2",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "react-refresh": "^0.14.0",
     "style-loader": "^3.3.1",
+    "ts-jest": "^29.0.0",
     "typescript": "^4.8.3",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.6.1",
