--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 		"outDir": "build",
     "sourceMap": true,
     "noImplicitAny": true,
+    "noUnusedLocals": true,
     "target": "es5",
     "lib": [
       "dom",
@@ -25,5 +26,6 @@
   },
   "include": [
     "src"
-  ]
+  ],
+  "exclude": ["node_modules", "build", "coverage", "webpack.*.js", "*.config.js", "*.test.ts*"]
 }
