Update all configs and add new package

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,7 @@
 	"editor.formatOnPaste": true,
 	"editor.formatOnSave": true,
 	"editor.formatOnType": true,
+	"editor.codeActionsOnSave": {
+		"source.fixAll.eslint": true
+	}
 }
