--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: CI
 on: [push, pull_request]
 jobs:
-  check-pushed-code:
+  test-code:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -11,4 +11,3 @@ jobs:
       - run: yarn install
       - run: yarn check-types
       - run: yarn test
-      - run: yarn build
