--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.0.2",
     "jest-environment-jsdom": "^29.0.2",
     "lint-staged": "^13.0.3",
