--- a/package.json
+++ b/package.json
@@ -30,8 +30,26 @@
     "check-format": "prettier -- --list-different"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@mantine/carousel": "^5.3.0",
+    "@mantine/core": "^5.3.0",
+    "@mantine/dates": "^5.3.0",
+    "@mantine/dropzone": "^5.3.0",
+    "@mantine/form": "^5.3.0",
+    "@mantine/hooks": "^5.3.0",
+    "@mantine/modals": "^5.3.0",
+    "@mantine/notifications": "^5.3.0",
+    "@mantine/nprogress": "^5.3.0",
+    "@mantine/spotlight": "^5.3.0",
+    "axios": "^0.27.2",
+    "dayjs": "^1.11.5",
+    "embla-carousel-react": "^7.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-query": "^3.39.2",
+    "react-router-dom": "^6.3.0",
+    "tabler-icons-react": "^1.54.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.0",
@@ -44,7 +62,6 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.16",
     "@types/react": "^18.0.18",
@@ -62,6 +79,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^5.6.3",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
