--- a/package.json
+++ b/package.json
@@ -44,9 +44,12 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "embla-carousel-react": "^7.0.2",
+    "i18next": "^21.9.1",
+    "i18next-browser-languagedetector": "^6.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-i18next": "^11.18.6",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
     "tabler-icons-react": "^1.54.0"
