--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 	"editor.formatOnPaste": true,
 	"editor.formatOnSave": true,
 	"editor.formatOnType": true,
+	"editor.formatOnSaveMode": "modificationsIfAvailable",
 	"editor.codeActionsOnSave": {
 		"source.fixAll.eslint": true
 	}
