Add auth provider

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "check-format": "prettier -- --list-different"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.10.2",
     "@emotion/react": "^11.10.4",
     "@mantine/carousel": "^5.3.0",
     "@mantine/core": "^5.3.0",
