Update vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
 	"editor.formatOnType": true,
 	"editor.formatOnSaveMode": "modificationsIfAvailable",
 	"editor.codeActionsOnSave": {
-		"source.fixAll.eslint": true
+		"source.fixAll.eslint": true,
+		"source.organizeImports": true
 	}
 }
