--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,7 @@
 	"editor.codeActionsOnSave": {
 		"source.fixAll.eslint": true,
 		"source.organizeImports": true
-	}
+	},
+	"typescript.preferences.importModuleSpecifier": "relative"
+
 }
