--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-template",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "",
   "author": "mrasheduzzaman <rashed091nsu@gmail.com>",
   "license": "MIT",
   "private": true,
@@ -19,8 +19,9 @@
   },
   "homepage": "https://github.com/rashed091/scaffold-frontend#readme",
   "scripts": {
-    "start": "webpack server --config webpack/webpack.config.js --env env=dev",
-    "build": "webpack server --config webpack/webpack.config.js --env env=prod",
+    "serve": "cross-env NODE_ENV=development webpack serve --config webpack.config.babel.js",
+    "build": "webpack --progress --config webpack.config.babel.js",
+    "check-size": "webpack --config webpack.config.babel.js --profile --json > webpack-stats.json && webpack-bundle-analyzer webpack-stats.json",
     "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "test": "jest --passWithNoTests",
@@ -62,6 +63,7 @@
     "@babel/preset-env": "^7.19.0",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@babel/register": "^7.18.9",
     "@babel/runtime": "^7.19.0",
     "@playwright/test": "^1.25.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
@@ -74,10 +76,13 @@
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "babel-loader": "^8.2.5",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest-dom": "^4.0.2",
@@ -92,9 +97,11 @@
     "jest": "^29.0.2",
     "jest-environment-jsdom": "^29.0.2",
     "lint-staged": "^13.0.3",
+    "mini-css-extract-plugin": "^2.6.1",
     "prettier": "^2.7.1",
     "react-refresh": "^0.14.0",
     "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.6",
     "ts-jest": "^29.0.0",
     "typescript": "^4.8.3",
     "webpack": "^5.74.0",
@@ -115,5 +122,11 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
-  }
+  },
+  "browserslist": [
+    "last 2 versions",
+    "> 5%",
+    "not dead",
+    "not IE < 11"
+  ]
 }
